--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,12 +12,10 @@
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
-  <body>
-    <div class="page">
-      <include src="./partials/header.html"></include>
-      <include src="./partials/main.html"></include>
-      <include src="./partials/footer.html"></include>
-    </div>
+  <body class="page">
+    <include src="./partials/header.html"></include>
+    <include src="./partials/main.html"></include>
+    <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
