--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Modulo 2 - evaluacion final - by marcjnn</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Open+Sans:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
